--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -12,7 +12,7 @@
                 </mat-radio-group>
                 <p class="fw-bold">{{texType}} *</p>
 
-                <mat-form-field>
+                <mat-form-field [class.mat-form-field-invalid]="submitted && !form.year">
                     <mat-label>Year</mat-label>
                     <mat-select [(ngModel)]="form.year" (selectionChange)="changeDate()">
                         <mat-option *ngFor="let year of currentYear" [value]="year">
@@ -21,7 +21,7 @@
                     </mat-select>
                 </mat-form-field>
 
-                <mat-form-field>
+                <mat-form-field [class.mat-form-field-invalid]="submitted && !form.month">
                     <mat-label>Month</mat-label>
                     <mat-select [(ngModel)]="form.month" (selectionChange)="changeDate()">
                         <mat-option *ngFor="let month of saveMonth" [value]="month.value">
@@ -35,8 +35,9 @@
                 <div class="d-flex">
                     <p>1. Total value of taxable electronic service exclusive of VAT</p>
                     <span class="flex-grow-1"></span>
-                    <mat-form-field class="tex-input">
-                        <input matInput  placeholder="THB" [(ngModel)]="form.saleAmount" [value]=100
+                    <mat-form-field class="tex-input" [class.mat-form-field-invalid]="submitted && !form.saleAmount"
+                        appearance="outline">
+                        <input matInput placeholder="THB" [(ngModel)]="form.saleAmount" [value]=100
                             (focus)="focusFunction(form.saleAmount, 1)"
                             (focusout)="focusOutFunction(form.saleAmount, 1)">
                     </mat-form-field>
@@ -44,7 +45,8 @@
                 <div class="d-flex">
                     <p>2. Total VAT to be remitted (7% of 1.)</p>
                     <span class="flex-grow-1"></span>
-                    <mat-form-field class="tex-input">
+                    <mat-form-field class="tex-input" [class.mat-form-field-invalid]="submitted && !form.taxAmount"
+                        appearance="outline">
                         <input matInput placeholder="THB" [(ngModel)]="form.taxAmount"
                             (focus)="focusFunction(form.taxAmount, 2)" (focusout)="focusOutFunction(form.taxAmount, 2)">
                     </mat-form-field>
@@ -54,21 +56,21 @@
                     <div class="d-flex">
                         <p>3. Surcharge</p>
                         <span class="flex-grow-1"></span>
-                        <mat-form-field class="tex-input">
+                        <mat-form-field class="tex-input" appearance="outline">
                             <input matInput placeholder="THB" [(ngModel)]="form.surcharge" readonly>
                         </mat-form-field>
                     </div>
                     <div class="d-flex">
                         <p>4. Penalty</p>
                         <span class="flex-grow-1"></span>
-                        <mat-form-field class="tex-input">
+                        <mat-form-field class="tex-input" appearance="outline">
                             <input matInput placeholder="THB" [(ngModel)]="form.penalty" readonly>
                         </mat-form-field>
                     </div>
                     <div class="d-flex">
                         <p>5. Total Amount of VAT, Surcharge, and Penalty to be remitted</p>
                         <span class="flex-grow-1"></span>
-                        <mat-form-field class="tex-input">
+                        <mat-form-field class="tex-input" appearance="outline">
                             <input matInput placeholder="THB" [(ngModel)]="form.totalAmount" readonly>
                         </mat-form-field>
                     </div>
@@ -82,30 +84,30 @@
             <div class="box mt-3">
                 <h1 class="fw-bold">Tax filing Detail</h1>
                 <div class="row mb-3">
-                    <label class="fw-bold col-1">Type of filing</label>
+                    <label class="fw-bold col-2">Type of filing</label>
                     <label class="col-9">{{taxData.filingType}}</label>
                 </div>
                 <div class="row mb-3">
-                    <label class="fw-bold col-1">{{texType}}</label>
-                    <label class="col-9">{{taxData.month}}  {{taxData.year}}</label>
+                    <label class="fw-bold col-2">{{texType}}</label>
+                    <label class="col-9">{{taxData.month}} {{taxData.year}}</label>
                 </div>
                 <h1 class="fw-bold">Tax Computation</h1>
                 <div class="d-flex">
                     <p class="fw-bold">Total value of taxable electronic service exclusive of VAT</p>
                     <span class="flex-grow-1"></span>
-                    <p>{{form.saleAmount}} THB</p>
+                    <p>{{form.saleAmount}}</p>
                 </div>
                 <div class="d-flex">
                     <p class="fw-bold">Total VAT to be remitted</p>
                     <span class="flex-grow-1"></span>
-                    <p>{{form.taxAmount}} THB</p>
+                    <p>{{form.taxAmount}}</p>
                 </div>
 
                 <ng-container *ngIf="form.filingType == 0">
                     <div class="d-flex">
                         <p class="fw-bold">Total Amount Payable</p>
                         <span class="flex-grow-1"></span>
-                        <p class="fw-bold">{{form.taxAmount}} THB</p>
+                        <p class="fw-bold">{{form.taxAmount}}</p>
                     </div>
                 </ng-container>
 
@@ -113,17 +115,17 @@
                     <div class="d-flex">
                         <p class="fw-bold">Surcharge</p>
                         <span class="flex-grow-1"></span>
-                        <p>{{form.surcharge}} THB</p>
+                        <p>{{form.surcharge}}</p>
                     </div>
                     <div class="d-flex">
                         <p class="fw-bold">Penalty</p>
                         <span class="flex-grow-1"></span>
-                        <p>{{form.penalty}} THB</p>
+                        <p>{{form.penalty}}</p>
                     </div>
                     <div class="d-flex">
                         <p class="fw-bold">Total Amount of VAT, Surcharge, and Penalty to be remitted</p>
                         <span class="flex-grow-1"></span>
-                        <p class="fw-bold">{{form.totalAmount}} THB</p>
+                        <p class="fw-bold">{{form.totalAmount}}</p>
                     </div>
                 </ng-container>
             </div>
@@ -132,16 +134,19 @@
     </mat-stepper>
 
     <ng-container *ngIf="page == 0">
-        <div class="ps-3">
+        <div class="ps-4">
             <button type="button" class="btn button me-4" (click)="back(stepper)">Back</button>
             <button type="button" class="btn btn-dark button" (click)="submit(stepper)">Next</button>
         </div>
     </ng-container>
 
     <ng-container *ngIf="page == 1">
+        <div class="ps-4 mb-3">
+            <button type="button" class="btn button me-4" (click)="back(stepper)">Back</button>
+        </div>
         <div class="text-center">
             <button type="button" class="btn btn-dark button" (click)="confirm()">Confirm and Submit</button>
         </div>
     </ng-container>
-    
+
 </div>
