--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,12 +43,6 @@ $my-app-theme: mat.define-light-theme((
     src: local("Kanit"), url('./assets/fonts/Kanit/Kanit-Regular.ttf');
   }
 
-  html,
-  body {
-      height: 100%;
-  }
-  
-  body {
-      margin: 0;
-      font-family: 'Kanit', sans-serif;
-  }
+  * {
+    font-family: 'Kanit', sans-serif;
+    }
