--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -57,21 +57,21 @@
                         <p>3. Surcharge</p>
                         <span class="flex-grow-1"></span>
                         <mat-form-field class="tex-input" appearance="outline">
-                            <input matInput placeholder="THB" [(ngModel)]="form.surcharge" readonly>
+                            <input matInput placeholder="THB" [(ngModel)]="form.surcharge" readonly disabled>
                         </mat-form-field>
                     </div>
                     <div class="d-flex">
                         <p>4. Penalty</p>
                         <span class="flex-grow-1"></span>
                         <mat-form-field class="tex-input" appearance="outline">
-                            <input matInput placeholder="THB" [(ngModel)]="form.penalty" readonly>
+                            <input matInput placeholder="THB" [(ngModel)]="form.penalty" readonly disabled>
                         </mat-form-field>
                     </div>
                     <div class="d-flex">
                         <p>5. Total Amount of VAT, Surcharge, and Penalty to be remitted</p>
                         <span class="flex-grow-1"></span>
                         <mat-form-field class="tex-input" appearance="outline">
-                            <input matInput placeholder="THB" [(ngModel)]="form.totalAmount" readonly>
+                            <input matInput placeholder="THB" [(ngModel)]="form.totalAmount" readonly disabled>
                         </mat-form-field>
                     </div>
                 </ng-container>
